<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CV Builder</string>
    <string name="candidate_name" tools:ignore="ExtraTranslation">Nejed Hatamleh</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="projects"><b>ZenHR</b>:HRMS system bundled with a ATS system..\n<b>BUSINESS</b>:SaaS company offering IT services in a B2B business.\n<b>EXTRA POINTS</b>:Engineer of a scalable applications..</string>
    <string name="career_note">Knowledgeable Android and Java developer with over 3 years of experience playing a key role in the design and development of enterprise web applications. Advanced expertise delivering outstanding results at all phases of the software development lifecycle in fast-paced Agile Scrum environments. Hands-on expertise in microservices technologies, with a dedication to learning and applying new and emerging technologies.</string>
    <string name="work_experience"><b>Technology</b>: Web application development (RoR)\n<b>Web Services</b>: Restful, JSON\n<b>SDLC</b>: Agile/Scrum, TDD</string>
    <string name="career_note_label">Career Note</string>
    <string name="about_me_label">About Me</string>
    <string name="about_me">Nejed is a skilled and pragmatic Ruby and Rails engineer background with over 2 years of experience playing a key role in the design and development of enterprise web applications. Ability to work with the team, and have an excellent problem-solving, and interpersonal skills.</string>
    <string name="education">Education</string>
    <string name="ROR_engineer">Ruby in Rails Engineer</string>
    <string name="_11_8_2020">11/8/2020</string>
    <string name="certification">Certification</string>
    <string name="bachelors_of_science_in_computer_science">Bachelors of Science in Computer Science</string>
    <string name="master_of_science_in_computer_science">Master of Science in Computer Science</string>
    <string name="maharishi_international_university">Maharishi International University</string>
    <string name="cisco_certificate">CISCO Certified Professional</string>
    <string name="_2_5_2019">2/5/2019</string>
    <string name="github">GitHub</string>
    <string name="linkedin">LinkedIn</string>
    <string name="email">Email</string>
    <string name="nejed_miu_com">nhatamleh@miu.com</string>
    <string name="phone">Phone</string>
    <string name="cnumber">123–432-5678</string>
    <string name="my_contact">My Contact</string>
    <string name="voluntary_work">Voluntary Work</string>
    <string name="volun">ISN</string>
    <string name="helping_students">Helping International Students</string>
    <string name="_2020">2020</string>
    <string name="JUST">Jordan University Of Science and Technology</string>
    <string name="teaching_students_as_ta">Working as TA</string>
    <string name="work_experience_label">Work Experience</string>
    <string name="sift">Sift</string>
    <string name="_2020_present">2022 - Present</string>
    <string name="google">ZenHR</string>
    <string name="ror_engineer">ROR Engineer</string>
    <string name="_2018_2020">2018 - 2021</string>
    <string name="_2016_2018">2016 - 2018</string>
    <string name="sr_full_stack_engineer">SR. ROR Engineer</string>
    <string name="_2014_2016">2014 - 2016</string>
    <string name="projects_label">Projects</string>
    <string name="_2018">2018</string>
    <string name="_2019">2019</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="saved_theme">theme</string>
    <string name="home_menu">Home</string>
    <string name="about_me_menu">About Me</string>
    <string name="work_menu">Work</string>
    <string name="contact_menu">Contact</string>
    <string name="login_title">Sign in to your account</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="my_twitter">https://twitter.com/nejedhatamleh</string>
    <string name="my_linkedin">https://www.linkedin.com/in/najed-hatamleh/</string>
    <string name="my_github">https://github.com/Najed-Hatamleh</string>
    <string name="my_email">nhatamleh@miu.edu</string>
    <string name="email_subject">MDP Course</string>
    <string name="email_body">Please, reach out to me for more information.</string>
    <string name="my_phone">tel:141251231</string>
    <string name="intent_filter">mailto:</string>
    <string name="intent_key">web</string>
    <string name="linked_in_title">LinkedIn</string>
    <string name="twitter_in_title">Twitter</string>
    <string name="github_in_title">GitHub</string>
    <string name="_4_7_2019">4/7/2019</string>
    <string name="_3_8_2020">3/8/2020</string>
    <string name="_1_4_2019">1/4/2019</string>
    <string name="_8_9_2018">8/9/2018</string>
    <string name="setting">Setting</string>
    <string name="add">add</string>
    <string name="logout">Logout</string>

    <string name="login_email">Username(required)</string>
    <string name="login_password">Password(required)</string>
    <string name="login_email_hint">example@domain.com</string>
    <string name="login_password_hint">*******</string>
    <string name="login_btn">Login</string>
    <string name="login_don_t_have_an_account_yet">Don\'t have an account?</string>
    <string name="login_link_sign_up">Create a new account</string>
    <string name="login_forgot_your_password">Forgot your password?</string>
    <string name="cv_linkedIn">Nejed Hatamleh</string>
    <string name="nejed10">Nejed</string>
    <string name="nejed">Nejed</string>

    <string name="activity_login_auto_hint_email">Email</string>
    <string name="activity_login_auto_hint_password">Password</string>
    <string name="dialog_base_url_auto_hint_url">Url</string>
    <string name="login_user_key">user</string>
    <string name="login_pass_key">pass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>